kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prex-demo
  labels:
    name: prex-demo
